--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 			">
 			<h1>
-				Fishmania <a href="https://github.com/donis3">by Deniz Özkan</a>
+				Fishmania <a href="https://github.com/donis3/unity-fishmania-build">by Deniz Özkan</a>
 			</h1>
 			<div style="font-size: 1rem">
 				Use arrow / WASD keys. No touch support on mobile.
