add favicon fix relative urls

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Fishmania Project by Deniz Özkan</title>
-		<script src="/Build/UnityLoader.js"></script>
+		<script src="./Build/UnityLoader.js"></script>
 		<script>
 			UnityLoader.instantiate("unityContainer", "Build/fish.json");
 		</script>
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
 		<header
@@ -16,7 +16,10 @@
 				font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 			">
 			<h1>
-				Fishmania <a href="https://github.com/donis3/unity-fishmania-build">by Deniz Özkan</a>
+				Fishmania
+				<a href="https://github.com/donis3/unity-fishmania-build"
+					>by Deniz Özkan</a
+				>
 			</h1>
 			<div style="font-size: 1rem">
 				Use arrow / WASD keys. No touch support on mobile.
