--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			UnityLoader.instantiate("unityContainer", "Build/fish.json");
 		</script>
 		<link rel="stylesheet" href="./style.css" />
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	</head>
 	<body>
 		<header
